--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"validator": "^12.1.0"
 	},
 	"devDependencies": {
+		"@types/jest": "^24.9.0",
 		"dotenv": "^8.2.0",
 		"jest": "^24.9.0",
 		"nodemon": "^2.0.2"
