--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
 	"name": "task-manager",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "server.js",
 	"scripts": {
-		"start": "node src/index.js",
-		"dev": "nodemon src/index.js",
-		"test": "jest"
+		"start": "node src/server.js",
+		"dev": "nodemon src/server.js",
+		"test": "jest --watch"
 	},
 	"keywords": [],
 	"author": "",
@@ -26,6 +26,7 @@
 		"@types/jest": "^24.9.0",
 		"dotenv": "^8.2.0",
 		"jest": "^24.9.0",
-		"nodemon": "^2.0.2"
+		"nodemon": "^2.0.2",
+		"supertest": "^4.0.2"
 	}
 }
