--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
 	"scripts": {
 		"start": "node src/server.js",
 		"dev": "nodemon src/server.js",
-		"test": "jest --watch"
+		"test": "jest --watch --runInBand"
+	},
+	"jest": {
+		"testEnvironment": "node"
 	},
 	"keywords": [],
 	"author": "",
